--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 
+
+[target.'cfg(target_os = "macos")'.dependencies]
+libc = "0.2.164"
+objc = "0.2.7"
+core-foundation = "0.10.0"
